Stop react from removing whitespace in countdown

--- a/src/components/presentation/robotInterface/displayCooldown/displayCooldown.scss
+++ b/src/components/presentation/robotInterface/displayCooldown/displayCooldown.scss
@@ -7,6 +7,7 @@
   }
   &__time-remainder {
     color: yellow;
+    white-space: pre;
   }
   &__time-total {
     color: rgb(174, 195, 214);
